--- a/wp-content/themes/understrap-child/sass/theme/partials/_atomicmouse_color_system.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_atomicmouse_color_system.scss
@@ -33,6 +33,7 @@ $yellow:  #ffc107 !default;
 $green:   #28a745 !default;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
+$tungsten:#707b81;
 
 $colors: () !default;
 $colors: map-merge((
@@ -51,7 +52,7 @@ $colors: map-merge((
   "gray-dark":  $gray-800
 ), $colors);
 
-$primary:       $blue !default;
+$primary:       $tungsten !default;
 $secondary:     $gray-600 !default;
 $success:       $green !default;
 $info:          $cyan !default;
