--- a/wp-content/themes/understrap-child/sass/theme/atomicmouse.scss
+++ b/wp-content/themes/understrap-child/sass/theme/atomicmouse.scss
@@ -207,6 +207,21 @@ margin-bottom: $vr-3;
 // ==========================================================================
 
 // 
+// webdev panel
+// ==========================================================================
+// #brands{
+// // height: 100vh;
+// }
+#webdev {
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+
+// 
 // expertise panel
 // ==========================================================================
 // #brands{
@@ -214,8 +229,8 @@ margin-bottom: $vr-3;
 // }
 
 #expt {
-    height: 100vh;
-    overflow: hidden;
+    // height: 100vh;
+    // overflow: hidden;
     display: flex;
     align-items: center;
     position: relative;
@@ -232,6 +247,7 @@ margin-bottom: $vr-3;
 }
 
 
+
 .exptcopy{
     @include body-4;
     @include v-1;
@@ -245,41 +261,51 @@ margin-bottom: $vr-3;
     font-weight: 400;
 }
 
+.expt-split{
+
+}
+
+
 .exptnav-vert {
-    display: none;
 
-    @include make-col-ready;
+           @include make-col-ready;
+    @include media-breakpoint-up(sm) {
+        @include make-col(12);
+    }
     @include media-breakpoint-up(md) {
-        @include make-col(2);
-
-        position: absolute;
-        top: 10%;
-        left: 2%;
-        display: block;
+        @include make-col(3);
     }
 }
 
+
 .expt-menu {
+    position: relative;
     list-style: none;
     padding-left: 0;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: stretch;
-    height: 20vh;
-    margin-top: $vr-1;
+    margin: 0;
+    bottom: unset;
+    height: unset;
 }
 
-.expt-menu a {
+.expt-menu li {
     padding: 0;
     color: $primary;
-}
-
-.exptnav-vert li {
     max-width: $ms-9;
     font-weight: 500;
     font-size: $ms-0-8;
+    text-indent: 0px;
     line-height: 1.2;
+    height: unset;
+    font-family: $font-family-sans-serif;
+    font-weight: 300;
+}
+
+.exptnav-vert li {
+
 }
 
 
@@ -290,21 +316,21 @@ margin-bottom: $vr-3;
 
 
 .expt-skills {
-    height: 70vh;
-    overflow: scroll;
 
-    @include make-col-ready;
+           @include make-col-ready;
     @include media-breakpoint-up(sm) {
         @include make-col(12);
-        padding: 0;
     }
-}
+    @include media-breakpoint-up(md) {
+        @include make-col(9);
+    }
+    }
 
 
 
-.expt-skills::-webkit-scrollbar {
-    display: none;
-}
+// .expt-skills::-webkit-scrollbar {
+//     display: none;
+// }
 
 .exptblock {
     display: flex;
@@ -319,9 +345,9 @@ margin-bottom: $vr-3;
 .expt-head {
     @include make-col-ready;
     @include make-col(12);
-    @include v-2;
-    border-top: thin solid $primary;
-    padding-top: $vr-3;
+    // @include v-2;
+    // border-top: thin solid $primary;
+    // padding-top: $vr-3;
 }
 
 .expt-head h4{
@@ -342,9 +368,12 @@ margin-bottom: $vr-3;
 }
 
 #smm-sub-panel .exptbox{
-   @include make-col-ready;
+        @include make-col-ready;
+    @include media-breakpoint-up(sm) {
+        @include make-col(12);
+    }
     @include media-breakpoint-up(md) {
-        @include make-col(3);
+        @include make-col(4);
         .expt-text{
             max-width: $ms-10;
         }
@@ -352,20 +381,26 @@ margin-bottom: $vr-3;
 }
 
 #post-sub-panel .exptbox{
-     @include make-col-ready;
+    @include make-col-ready;
+    @include media-breakpoint-up(sm) {
+        @include make-col(12);
+    }
     @include media-breakpoint-up(md) {
         @include make-col(4);
-           .expt-text{
+     .expt-text{
             max-width: $ms-10_5;
         }
     }
 }
 
 #marcom-sub-panel .exptbox{
-     @include make-col-ready;
+        @include make-col-ready;
+    @include media-breakpoint-up(sm) {
+        @include make-col(12);
+    }
     @include media-breakpoint-up(md) {
-        @include make-col(3);
-           .expt-text{
+        @include make-col(4);
+        .expt-text{ 
             max-width: $ms-10_5;
         }
     }
@@ -762,29 +797,29 @@ margin-bottom: $vr-3;
 // // height: 100vh;
 // }
 
-.maincontainer {
-    perspective: 1px;
-    transform-style: preserve-3d;
-    height: 100vh;
-    overflow-x: hidden;
-    overflow-y: scroll;
-}
-
-.parallaxcontainer {
-    padding-top: ms(5);
-    display: flex;
-    flex: 1 0 auto;
-    position: relative;
-    height: 100vh;
-    transform: translateZ(-1px) scale(2);
-    z-index: -1;
-}
-
-.contentcontainer {
-    position: relative;
-    display: block;
-    z-index: 1;
-}
+//.maincontainer {
+//    perspective: 1px;
+//    transform-style: preserve-3d;
+//    height: 100vh;
+//    overflow-x: hidden;
+//    overflow-y: scroll;
+//}
+//
+//.parallaxcontainer {
+//    padding-top: ms(5);
+//    display: flex;
+//    flex: 1 0 auto;
+//    position: relative;
+//    height: 100vh;
+//    transform: translateZ(-1px) scale(2);
+//    z-index: -1;
+//}
+//
+//.contentcontainer {
+//    position: relative;
+//    display: block;
+//    z-index: 1;
+//}
 
 #catscontainer h2 {
     @include v-3;
