--- a/wp-content/themes/understrap-child/sass/theme/atomicmouse.scss
+++ b/wp-content/themes/understrap-child/sass/theme/atomicmouse.scss
@@ -1,3 +1,39 @@
+
+/* [OVERLAY] */
+#expt-overlay-1, #expt-overlay-2, #expt-overlay-3, #expt-overlay-4,  {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 110vh;
+  background: rgba(0, 0, 0, 0.92);
+  z-index: 999;
+  /* We hide the overlay by default */
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.5s;
+  .expt-copy, .expt-vert{
+    color: $primary;
+  }
+
+}
+/* This CSS class will show the overlay */
+#expt-overlay-1.show, #expt-overlay-2.show, #expt-overlay-3.show,#expt-overlay-4.show {
+  visibility: visible;
+  opacity: 1;
+}
+
+/* [OVERLAY CLOSE BUTTON] */
+#expt-close-1, #expt-close-2, #expt-close-3, #expt-close-4 {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  color: #fff;
+  font-size: 3em;
+  cursor: pointer;
+  z-index: 1000;
+}
+
 //
 // TODO
 //
@@ -8,96 +44,11 @@
 // => find/replace cover-container to container-fluid (home and modus panels)
 
 
-
-
-
-
-// .flex-item:nth-of-type(1) {order: 1;}
-// .flex-item:nth-of-type(2) {order: 2;}
-// .flex-item:nth-of-type(3) {order: 3;}
-// .flex-item:nth-of-type(4) {order: 4;}
-// .flex-item:nth-of-type(5) {order: 5;}
-// .flex-item:nth-of-type(6) {order: 6;}
-// .flex-item:nth-of-type(7) {order: 7;}
-// .flex-item:nth-of-type(8) {order: 8;}
-// .flex-item:nth-of-type(9) {order: 9;}
-// .flex-item:nth-of-type(10) {order: 10;}
-// .flex-item:nth-of-type(11) {order: 11;}
-// .flex-item:nth-of-type(12) {order: 12;}
-// .flex-item:nth-of-type(13) {order: 13;}
-// .flex-item:nth-of-type(14) {order: 14;}
-// .flex-item:nth-of-type(15) {order: 15;}
-// .flex-item:nth-of-type(16) {order: 16;}
-// .flex-item:nth-of-type(17) {order: 17;}
-// .flex-item:nth-of-type(18) {order: 18;}
-// .flex-item:nth-of-type(19) {order: 19;}
-// .flex-item:nth-of-type(20) {order: 20;}
-// .flex-item:nth-of-type(21) {order: 21;}
-// .flex-item:nth-of-type(22) {order: 22;}
-// .flex-item:nth-of-type(23) {order: 23;}
-// .flex-item:nth-of-type(24) {order: 24;}
-// .flex-item:nth-of-type(25) {order: 25;}
-// .flex-item:nth-of-type(26) {order: 26;}
-// .flex-item:nth-of-type(27) {order: 27;}
-// .flex-item:nth-of-type(28) {order: 28;}
-// .flex-item:nth-of-type(29) {order: 29;}
-// .flex-item:nth-of-type(30) {order: 30;}
-// .flex-item:nth-of-type(31) {order: 31;}
-// .flex-item:nth-of-type(32) {order: 32;}
-// .flex-item:nth-of-type(33) {order: 33;}
-// .flex-item:nth-of-type(34) {order: 34;}
-// .flex-item:nth-of-type(35) {order: 35;}
-// .flex-item:nth-of-type(36) {order: 36;}
-// .flex-item:nth-of-type(37) {order: 37;}
-// .flex-item:nth-of-type(38) {order: 38;}
-// .flex-item:nth-of-type(39) {order: 39;}
-// .flex-item:nth-of-type(40) {order: 40;}
-// .flex-item:nth-of-type(41) {order: 41;}
-// .flex-item:nth-of-type(42) {order: 42;}
-// .flex-item:nth-of-type(43) {order: 43;}
-// .flex-item:nth-of-type(44) {order: 44;}
-// .flex-item:nth-of-type(45) {order: 45;}
-// .flex-item:nth-of-type(46) {order: 46;}
-// .flex-item:nth-of-type(47) {order: 47;}
-// .flex-item:nth-of-type(48) {order: 48;}
-// .flex-item:nth-of-type(49) {order: 49;}
-// .flex-item:nth-of-type(50) {order: 50;}
-// .flex-item:nth-of-type(51) {order: 51;}
-// .flex-item:nth-of-type(52) {order: 52;}
-// .flex-item:nth-of-type(53) {order: 53;}
-// .flex-item:nth-of-type(54) {order: 54;}
-// .flex-item:nth-of-type(55) {order: 55;}
-// .flex-item:nth-of-type(56) {order: 56;}
-// .flex-item:nth-of-type(57) {order: 57;}
-// .flex-item:nth-of-type(58) {order: 58;}
-// .flex-item:nth-of-type(59) {order: 59;}
-// .flex-item:nth-of-type(60) {order: 60;}
-// .flex-item:nth-of-type(61) {order: 61;}
-// .flex-item:nth-of-type(62) {order: 62;}
-// .flex-item:nth-of-type(63) {order: 63;}
-// .flex-item:nth-of-type(64) {order: 64;}
-// .flex-item:nth-of-type(65) {order: 65;}
-// .flex-item:nth-of-type(66) {order: 66;}
-// .flex-item:nth-of-type(67) {order: 67;}
-// .flex-item:nth-of-type(68) {order: 68;}
-// .flex-item:nth-of-type(69) {order: 69;}
-// .flex-item:nth-of-type(70) {order: 70;}
-// .flex-item:nth-of-type(71) {order: 71;}
-// .flex-item:nth-of-type(72) {order: 72;}
-// .flex-item:nth-of-type(73) {order: 73;}
-// .flex-item:nth-of-type(74) {order: 74;}
-// .flex-item:nth-of-type(75) {order: 75;}
-// .flex-item:nth-of-type(76) {order: 76;}
-// .flex-item:nth-of-type(77) {order: 77;}
-// .flex-item:nth-of-type(78) {order: 78;}
-// .flex-item:nth-of-type(79) {order: 79;}
-// .flex-item:nth-of-type(80) {order: 80;}
-
 .tempcontainer .row{
     width: 100%;
 }
 
-.tempcontainer a{
+.tempcontainer a{ 
 display: flex;
 align-items: center;
 justify-content: center;
@@ -229,11 +180,8 @@ margin-bottom: $vr-3;
 // }
 
 #expt {
-    // height: 100vh;
     // overflow: hidden;
-    display: flex;
-    align-items: center;
-    position: relative;
+    height: 100vh;
 }
 
 #exptcontainer {
@@ -242,10 +190,12 @@ margin-bottom: $vr-3;
     margin: 0 auto;
 }
 
-.exptintro{
-    max-width: $ms-14;
-}
 
+.expt-intro{
+height: 100vh;
+    display: flex;
+    align-items: center;
+}
 
 
 .exptcopy{
@@ -259,23 +209,51 @@ margin-bottom: $vr-3;
 .exptsub{
     @include display-5;
     font-weight: 400;
-    padding-top: $vr-1;
+    margin: $vr-1 0;
+    padding-left: 0;
 }
+
+
+// .expt-content, .expt-menu-horz{
+//  @include make-col-ready;
+//     @include media-breakpoint-up(sm) {
+//         @include make-col(12);
+//     }
+// }
 
 .expt-split{
 }
 
+// #expt-carousel-inner{
+//     height: 100vh;
+// }
 
-.expt-nav-horz{
-padding: 0;
-margin: $vr-2 0;
-    @include make-col-ready;
-    @include media-breakpoint-up(sm) {
-        @include make-col(12);
-    }
+.expt-overlay{
+   position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
+  background: rgba(0,0,0,0.5);
+  color: #fff;
+  overflow: hidden;
+  text-align: center;
+  /* fix text transition issue for .left and .right but need to overwrite left and right properties in .right */
+  width: 100%; 
+  
+  -moz-transition: top 0.3s, right 0.3s, bottom 0.3s, left 0.3s;
+  -webkit-transition: top 0.3s, right 0.3s, bottom 0.3s, left 0.3s;
+  transition: top 0.3s, right 0.3s, bottom 0.3s, left 0.3s;
+} 
+
+
+.expt-menu-box:hover .expt-overlay.left {
+  left: 0;
 }
 
-.expt-nav-horz ul{
+.expt-overlay.left {
+  left: 100%;
+}
+
+
+.expt-menu-horz{
             margin-bottom: 0;
             display: flex;
     flex-direction: row;
@@ -306,11 +284,22 @@ text-align: center;
         @include make-col(12);
     }
     @include media-breakpoint-up(md) {
+        @include make-col(6);
+        padding: 0;
+    }
+        @include media-breakpoint-up(lg) {
         @include make-col(3);
+        padding: 0;
     }
 
 }
 
+.expt-row{
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+    height: 100vh;
+}
 
 
 .expt-menu {
@@ -362,7 +351,7 @@ text-align: center;
 }
 
 
-.expt-skills {
+.exptblock {
 
            @include make-col-ready;
     @include media-breakpoint-up(sm) {
@@ -373,7 +362,18 @@ text-align: center;
     }
     }
 
-
+.webdev-sub-panel .exptblock .row{
+margin-bottom: $vr-2_5;
+display: flex;
+fill: $primary;
+align-items: center;
+h6{
+    color: $primary;
+}
+  .style-svg{
+    width: $ms-7;
+  }
+}
 
 // .expt-skills::-webkit-scrollbar {
 //     display: none;
@@ -382,8 +382,6 @@ text-align: center;
 .exptblock {
     display: flex;
     flex-wrap: wrap;
-
-    // justify-content: space-around;
     align-items: flex-start;
     align-content: flex-start;
     margin-bottom: $vr-1;
@@ -404,7 +402,7 @@ text-align: center;
     text-transform: uppercase;
 }
 
-.exptbox {
+.expt-box {
     margin-bottom: $vr-2;
 
     // @include make-col-ready;
@@ -416,7 +414,7 @@ text-align: center;
     // }
 }
 
-#smm-sub-panel .exptbox{
+.smm-sub-panel .expt-box{
         @include make-col-ready;
     @include media-breakpoint-up(sm) {
         @include make-col(12);
@@ -429,7 +427,7 @@ text-align: center;
     }  
 }
 
-#post-sub-panel .exptbox{
+.marketing-sub-panel .expt-box{
     @include make-col-ready;
     @include media-breakpoint-up(sm) {
         @include make-col(12);
@@ -442,7 +440,20 @@ text-align: center;
     }
 }
 
-#marcom-sub-panel .exptbox{
+.marcom-sub-panel .expt-box{
+        @include make-col-ready;
+    @include media-breakpoint-up(sm) {
+        @include make-col(12);
+    }
+    @include media-breakpoint-up(md) {
+        @include make-col(4);
+        .expt-text{ 
+            max-width: $ms-10_5;
+        }
+    }
+}
+
+.webdev-sub-panel .expt-box{
         @include make-col-ready;
     @include media-breakpoint-up(sm) {
         @include make-col(12);
