--- a/wp-content/themes/understrap-child/sass/theme/partials/_atomicmouse_fontface_import.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_atomicmouse_fontface_import.scss
@@ -7,7 +7,7 @@
          url('../fonts/geomanist-thin-webfont/geomanist-thin-webfont.ttf') format('truetype'),
          url('../fonts/geomanist-thin-webfont/geomanist-thin-webfont.svg#geomanistthin') format('svg');
     font-weight: 100;
-    font-style: normal;
+    font-style: thin;
 }
 
 @font-face {
@@ -87,5 +87,7 @@
 
 
 
-// Jamie-johson.me note: need to install Geomanist medium, black, thin & light
+// Jamie-johson.me note: need to install Geomanist italics - if desired
+
+
 
