--- a/wp-content/themes/understrap-child/sass/theme/atomicmouse.scss
+++ b/wp-content/themes/understrap-child/sass/theme/atomicmouse.scss
@@ -1,63 +1,4 @@
-// [OVERLAY]
-#expt-overlay-1, #expt-overlay-2, #expt-overlay-3, #expt-overlay-4 {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
 
-    // height: 120vh;
-    background: rgba(0, 0, 0, 0.92);
-    z-index: 999;
-
-    // We hide the overlay by default */
-    visibility: hidden;
-    opacity: 0;
-    transition: all 0.5s;
-    overflow-y: scroll;
-
-    .expt-copy, .expt-vert {
-        color: $primary;
-    }
-}
-
-#expt-overlay-1{
-    height: 100vh;
-}
-#expt-overlay-2{
-    height: 100vh;
-}
-#expt-overlay-3{
-    height: 100vh;
-}
-#expt-overlay-4{
-    height: 125vh;
-}
-
-
-
-
-// This CSS class will show the overlay */
-#expt-overlay-1.show, #expt-overlay-2.show, #expt-overlay-3.show, #expt-overlay-4.show {
-    visibility: visible;
-    opacity: 1;
-}
-
-// [OVERLAY CLOSE BUTTON] */
-#expt-close-1, #expt-close-2, #expt-close-3, #expt-close-4 {
-    position: fixed;
-    top: $ms-4;
-    right: $ms-4;
-    color: #fff;
-    cursor: pointer;
-    z-index: 1000;
-    background: $primary;
-    height: $ms-3;
-    width: $ms-3;
-    border-radius: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 
 //
 // TODO
@@ -67,6 +8,13 @@
 // => fix rvr units
 // => transform sidenav spacing from modularscale to vertical rhythm
 // => find/replace cover-container to container-fluid (home and modus panels)
+#wrapper-navbar{
+    position: fixed;
+    width: 100%;
+    z-index: 500;
+}
+
+
 
 .tempcontainer .row {
     width: 100%;
@@ -77,7 +25,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    margin-bottom: $vr-3;
+    // margin-bottom: $rvr-3;
 }
 
 .tempcontainer {
@@ -87,7 +35,7 @@
     // justify-content: space-around;
     align-items: flex-start;
     align-content: flex-start;
-    margin-bottom: $vr-1;
+    // margin-bottom: $rvr-1;
 
     @include make-col-ready;
     @include media-breakpoint-up(sm) {
@@ -106,7 +54,7 @@
 }
 
 .tempsize {
-    @include v-1;
+    // @include v-1;
     @include make-col-ready;
     @include make-col(12);
 }
@@ -202,26 +150,119 @@
 // // height: 100vh;
 // }
 
-#expt {
-    // overflow: hidden;
+.expt {
+     display: flex;
+     @include make-col-ready;
+      @include make-col(12);
+        @include media-breakpoint-up(xs) {
+           position: relative;
+       }
+    @include media-breakpoint-up(lg) {
     height: 100vh;
 }
+}
 
-#exptcontainer {
+// [OVERLAY]
+#expt-overlay-1, #expt-overlay-2, #expt-overlay-3, #expt-overlay-4 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+
+    // height: 120vh;
+    background: rgba(0, 0, 0, 0.92);
+    z-index: 999;
+
+    // We hide the overlay by default */
+    visibility: hidden;
+    opacity: 0;
+    transition: all 0.5s;
+    overflow-y: scroll;
+
+    .expt-copy, .expt-vert {
+        color: $primary;
+    }
+}
+
+#expt-overlay-1{
+    height: 100vh;
+        order: 2;
+      @include media-breakpoint-up(lg) {
+        order: 1;
+     }
+}
+#expt-overlay-2{
+    height: 100vh;
+        order: 3;
+      @include media-breakpoint-up(lg) {
+        order: 2;
+     }
+}
+#expt-overlay-3{
+    height: 100vh;
+        order: 4;
+      @include media-breakpoint-up(lg) {
+        order: 3;
+     }
+}
+#expt-overlay-4{
+    height: 125vh;
+        order: 5;
+      @include media-breakpoint-up(lg) {
+        order: 4;
+     }
+}
+
+
+
+
+// This CSS class will show the overlay */
+#expt-overlay-1.show, #expt-overlay-2.show, #expt-overlay-3.show, #expt-overlay-4.show {
+    visibility: visible;
+    opacity: 1;
+}
+
+// [OVERLAY CLOSE BUTTON] */
+#expt-close-1, #expt-close-2, #expt-close-3, #expt-close-4 {
+    position: fixed;
+    top: $ms-4;
+    right: $ms-4;
+    color: #fff;
+    cursor: pointer;
+    z-index: 1000;
+    background: $primary;
+    height: $ms-3;
+    width: $ms-3;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.exptcontainer {
     display: flex;
     flex-direction: column;
     margin: 0 auto;
 }
 
 .expt-intro {
-    height: 100vh;
+  
     display: flex;
     align-items: center;
+             @include media-breakpoint-up(xs) {
+        order: 1;
+     }
+      @include media-breakpoint-up(md) {
+       height: 100vh;
+   }
+         @include media-breakpoint-up(lg) {
+        order: 5;
+     }
 }
 
 .exptcopy {
     @include body-4;
-    @include v-1;
+    // @include v-1;
 
     line-height: 1.2;
     max-width: $ms-11;
@@ -231,7 +272,7 @@
     @include display-5;
 
     font-weight: 400;
-    margin: $vr-1 0;
+    // margin: $rvr-1 0;
     padding-left: 0;
 }
 
@@ -289,7 +330,7 @@
     height: unset;
     list-style: none;
     text-indent: 0;
-    padding: $vr-1_5 0;
+    // padding: $rvr-1_5 0;
     padding: 0;
 }
 
@@ -384,7 +425,7 @@
     flex-wrap: wrap;
     align-items: flex-start;
     align-content: flex-start;
-    margin-bottom: $vr-1;
+    // margin-bottom: $rvr-1;
 
     @include make-col-ready;
     @include media-breakpoint-up(xs) {
@@ -704,7 +745,7 @@
 
 
         .row {
-            margin-bottom: $vr-2;
+            // margin-bottom: $rvr-2;
             flex-wrap: wrap;
         }
 
@@ -714,7 +755,7 @@
             width: $ms-8;
             height: 100%;
             padding-bottom: $ms-0-1;
-            margin-bottom: $vr-1;
+            // margin-bottom: $rvr-1;
             text-align: center;
         }
 
@@ -742,7 +783,7 @@
                 @include make-col(6);
 
                 height: 325vh;
-                margin-top: $vr-3;
+                // margin-top: $rvr-3;
                 justify-content: center;
                 flex-wrap: wrap;
             }
@@ -826,7 +867,7 @@
         @include make-col-ready;
         @include media-breakpoint-up(xs) {
             @include make-col(12);
-            padding: 0 0 $vr-1 0;
+            // padding: 0 0 $rvr-1 0;
         }
 
 
@@ -841,7 +882,7 @@
 
             max-width: $ms-13;
 
-            @include v-1;
+            // @include v-1;
         }
     }
 
@@ -867,7 +908,7 @@
         @include make-col-ready;
         @include media-breakpoint-up(xs){
             h3{
-                @include v-1;
+                // @include v-1;
             }
         }
         @include media-breakpoint-up(md) {
@@ -893,13 +934,13 @@
     .expt-head {
         @include make-col-ready;
         @include make-col(12);
-        @include v-2;
+        // @include v-2;
 
         padding-left: 0;
 
-        // @include v-2;
+        // // @include v-2;
         // border-top: thin solid $primary;
-        // padding-top: $vr-3;
+        // padding-top: $rvr-3;
    
     }
 
@@ -909,7 +950,7 @@
     }
 
     .expt-box {
-        margin-bottom: $vr-2;
+        // margin-bottom: $rvr-2;
        }
 
     .expt-row, .expt-row * {
@@ -925,7 +966,7 @@
     .expt-icon {
         width: $ms-7;
         margin-left: -.8em;
-        margin-bottom: $vr-_25;
+        // margin-bottom: $rvr-_25;
     }
 
     .expt-icon .style-svg {
@@ -938,8 +979,8 @@
     }
 
     .expt-copy h6 {
-        margin-bottom: $vr-1;
-        margin-top: $vr-_75;
+        // margin-bottom: $rvr-1;
+        // margin-top: $rvr-_75;
     }
 
     .expt-text ul {
@@ -948,7 +989,7 @@
     }
 
     #exptcontainer h2 {
-        margin-bottom: $vr-1;
+        // margin-bottom: $rvr-1;
     }
 
     .exptcontent {
@@ -966,12 +1007,12 @@
     // home/cash panel
     // ==========================================================================
     #cash {
-        height: 95vh;
+        height: 100vh;
     }
 
     #cashcontainer > div.pagetitle {
-        margin-bottom: $vr-5;
-        margin-top: $vr-2;
+        // margin-bottom: $rvr-5;
+        // margin-top: $rvr-2;
     }
 
     #cashcontainer {
@@ -979,16 +1020,16 @@
         margin: 0 auto;
         justify-content: center;
         align-items: left;
-        height: 95vh;
+        height: 100vh;
         flex-direction: column;
     }
 
     .cashheadline {
-        margin-bottom: $vr-2;
+        // margin-bottom: $rvr-2;
     }
 
     .cashheadline h2 {
-        // @include v-1;
+        // // @include v-1;
    
     }
 
@@ -998,12 +1039,12 @@
 
     // #cashcontainer > span{
     //     @include display-4;
-    //     @include v-0;
+    //     // @include v-0;
     // }
 
     // #cashcontainer > span.cash2{
     //     @include display-2;
-    //     @include v-2;
+    //     // @include v-2;
     // }
 
     .cashblock {
@@ -1019,7 +1060,7 @@
     }
 
     .cashshell {
-        margin-bottom: $vr-1;
+        margin-bottom: $rvr-1;
     }
 
     .cashcontent {
@@ -1027,13 +1068,12 @@
     }
 
     .cashcontent h4 {
-        @include v0;
+        // @include v-0;
     }
 
     .cashsubhead {
         @include display-5;
-
-        margin-bottom: $vr-1;
+        // margin-bottom: $rvr-1;
     }
 
     .cashlist {
@@ -1062,8 +1102,8 @@
     }
 
     #custcontent > div.pagetitle {
-        margin-bottom: $vr-5;
-        margin-top: $vr-2;
+        // margin-bottom: $rvr-5;
+        // margin-top: $rvr-2;
     }
 
     .row#custcontent {
@@ -1079,7 +1119,7 @@
     }
 
     #custheadline {
-        margin-bottom: $vr-2;
+        // margin-bottom: $rvr-2;
     }
 
     .custblock {
@@ -1095,7 +1135,7 @@
     }
 
     .custshell {
-        margin-bottom: $vr-1;
+        // margin-bottom: $rvr-1;
     }
 
     .custcopy {
@@ -1121,8 +1161,8 @@
     }
 
     #scvcontent > div.pagetitle {
-        margin-bottom: $vr-5;
-        margin-top: $vr-2;
+        // margin-bottom: $rvr-5;
+        // margin-top: $rvr-2;
     }
 
     .row#scvcontent {
@@ -1138,7 +1178,7 @@
     }
 
     #scvheadline {
-        margin-bottom: $vr-2;
+        // margin-bottom: $rvr-2;
     }
 
     .scvblock {
@@ -1154,7 +1194,7 @@
     }
 
     .scvshell {
-        margin-bottom: $vr-1;
+        margin-bottom: $rvr-1;
     }
 
     .scvcopy {
@@ -1180,8 +1220,8 @@
     }
 
     #smmcontent > div.pagetitle {
-        margin-bottom: $vr-5;
-        margin-top: $vr-2;
+        // margin-bottom: $rvr-5;
+        // margin-top: $rvr-2;
     }
 
     #smmheadline span {
@@ -1202,7 +1242,7 @@
 
     .endtoend {
         width: 1201px;
-        margin: $vr-1 0;
+        // margin: $rvr-1 0;
     }
 
     .smmblock {
@@ -1273,8 +1313,7 @@
     }
 
     #availablecontainer .pagetitle, #availableheadline {
-        margin-bottom: rvr(2);
-        margin-bottom: vr(2);
+        // margin-bottom: rvr(2);
 
         @include make-col-ready;
         @include make-col(12);
@@ -1351,7 +1390,7 @@
         max-width: ms(10);
 
         @include body-4;
-        @include v-1;
+        // @include v-1;
 
         line-height: 1.2;
     }
@@ -1363,7 +1402,7 @@
         // justify-content: space-around;
         align-items: flex-start;
         align-content: flex-start;
-        margin-bottom: $vr-1;
+        margin-bottom: $rvr-1;
 
         @include make-col-ready;
         @include media-breakpoint-up(sm) {
@@ -1377,10 +1416,10 @@
     }
 
     .catfig {
-        margin-top: $vr-_5;
-        margin-bottom: $vr-_5;
-        margin-left: $vr-_5;
-        margin-right: $vr-_5;
+        margin-top: $rvr-_5;
+        margin-bottom: $rvr-_5;
+        margin-left: $rvr-_5;
+        margin-right: $rvr-_5;
         position: relative;
         width: $ms-9;
     }
@@ -1397,7 +1436,7 @@
         color: #fff;
         left: 0;
         top: 0;
-        padding: $vr-_25;
+        padding: $rvr-_25;
         font-weight: 300;
         z-index: 2;
         -webkit-box-sizing: border-box;
@@ -1419,7 +1458,7 @@
     }
 
     .caption-title {
-        margin-bottom: $vr-_25;
+        margin-bottom: $rvr-_25;
         font-size: $ms-0-9;
         font-weight: 400;
         text-transform: uppercase;
@@ -1427,7 +1466,7 @@
 
     .caption-text {
         font-size: $ms-0-6;
-        line-height: $vr-_75;
+        line-height: $rvr-_75;
         padding: 0 $ms-1_5;
     }
 
@@ -1463,7 +1502,7 @@
 
         font-weight: 400;
 
-        @include v-1;
+        // @include v-1;
 
         padding-left: 0;
     }
@@ -1483,7 +1522,7 @@
     .brandsblock .style-svg {
         width: $ms-8_5;
         fill: #000;
-        padding: 0 $ms-1_5 $vr-2 $ms-1_5;
+        padding: 0 $ms-1_5 $rvr-2 $ms-1_5;
     }
 
     #brandscontainer {
@@ -1491,7 +1530,7 @@
     }
 
     #brandscontainer h2 {
-        @include v-3;
+        // @include v-3;
     }
 
     .brandscontent {
@@ -1510,7 +1549,7 @@
         max-width: ms(10);
 
         @include body-4;
-        @include v-1;
+        // @include v-1;
 
         line-height: 1.2;
     }
@@ -1522,7 +1561,7 @@
         // justify-content: space-around;
         align-items: flex-start;
         align-content: flex-start;
-        margin-bottom: $vr-1;
+        margin-bottom: $rvr-1;
 
         @include make-col-ready;
         @include media-breakpoint-up(sm) {
@@ -1563,7 +1602,7 @@
 
         font-weight: 400;
 
-        @include v-1;
+        // @include v-1;
 
         padding-left: 0;
     }
@@ -1611,7 +1650,7 @@
         @include make-col-ready;
         @include make-col(12);
 
-        margin-bottom: $vr-1;
+        margin-bottom: $rvr-1;
     }
 
     .hybridtitle {
@@ -1630,7 +1669,7 @@
 
         font-weight: 400;
 
-        @include v-1;
+        // @include v-1;
 
         padding-left: 0;
     }
@@ -1651,7 +1690,7 @@
         max-width: ms(11);
 
         @include body-4;
-        @include v-1;
+        // @include v-1;
 
         line-height: 1.2;
     }
@@ -1667,21 +1706,21 @@
         justify-content: center;
         align-items: left;
         flex-direction: column;
-        height: 95vh;
+        height: 100vh;
     }
 
     #aboutsplashcontainer h1 {
-        @include v-1;
+        // // @include v-1;
     }
 
     #aboutsplashcontainer > span {
         @include display-4;
-        @include v-0;
+        // @include v-0;
     }
 
     #aboutsplashcontainer .aboutsplash2 {
         @include display-2;
-        @include v-2;
+        // @include v-2;
     }
 
     // 
@@ -1695,22 +1734,46 @@
         justify-content: center;
         align-items: left;
         flex-direction: column;
-        height: 95vh;
+        height: 100vh;
     }
 
     #splashcontainer h1 {
-        @include v-1;
+        // @include v-1;
     }
 
     #splashcontainer > span {
         @include display-4;
-        @include v-0;
+        // @include v-0;
     }
 
     #splashcontainer .splash2 {
         @include display-2;
-        @include v-2;
+        // @include v-2;
     }
+
+  .bgme {
+        opacity: 1;
+        background-image: url("http://jamiejohnsonmev2.test/wp-content/uploads/2018/12/me.jpg");
+        background-repeat: no-repeat;
+  
+        @include make-col-ready;
+              @include make-col(12);
+                @include media-breakpoint-up(xs) {
+                  background-position: right bottom;
+            background-size: 135%;
+               }
+            @include media-breakpoint-up(sm) {
+        }
+            @include media-breakpoint-up(md) {
+            background-position: right bottom;
+            background-size: cover;
+        }
+            @include media-breakpoint-up(lg) {
+        }
+            @include media-breakpoint-up(xl) {
+        }
+        }
+    
 
     // 
     // home call to action panel
@@ -1723,21 +1786,21 @@
         justify-content: center;
         align-items: left;
         flex-direction: column;
-        height: 95vh;
+        height: 100vh;
     }
 
     #homectacontainer h1 {
-        @include v-1;
+        // @include v-1;
     }
 
     #homectacontainer > span {
         @include display-4;
-        @include v-0;
+        // @include v-0;
     }
 
     #homectacontainer .homecta2 {
         @include display-2;
-        @include v-2;
+        // @include v-2;
     }
 
     //
@@ -1757,8 +1820,7 @@
     }
 
     #docontainer .pagetitle, #doheadline {
-        margin-bottom: rvr(2);
-        margin-bottom: vr(2);
+        // margin-bottom: rvr(2);
 
         @include make-col-ready;
         @include make-col(12);
@@ -1930,21 +1992,21 @@
         justify-content: center;
         align-items: left;
         flex-direction: column;
-        height: 95vh;
+        height: 100vh;
     }
 
     #helpctacontainer h1 {
-        @include v-1;
+        // @include v-1;
     }
 
     #helpctacontainer > span {
         @include display-4;
-        @include v-0;
+        // @include v-0;
     }
 
     #helpctacontainer .helpcta2 {
         @include display-2;
-        @include v-2;
+        // @include v-2;
     }
 
     // ==========================================================================
@@ -2028,8 +2090,8 @@
     .pagetitle hr {
         border-style: solid;
         border-width: 1px;
-        margin-top: $vr-_5;
-        margin-bottom: $vr-0;
+        // margin-top: $rvr-_5;
+        // margin-bottom: $rvr-0;
         margin-left: 0;
         margin-right: 0;
         width: $width-3;
@@ -2040,20 +2102,14 @@
     }
 
     .chevup{
-    margin-bottom: $vr-2;
+    margin-bottom: $rvr-2;
     }
 
     #testdiv {
         height: 90vh;
     }
 
-    .bgme {
-        opacity: 1;
-        background-image: url("http://jamiejohnsonmev2.test/wp-content/uploads/2018/12/me.jpg");
-        background-repeat: no-repeat;
-        background-position: right bottom;
-        background-size: cover;
-    }
+  
 
     .arrow {
         opacity: 1;
@@ -2117,7 +2173,7 @@
     }
 
     .vh-95 {
-        height: 95vh;
+        height: 100vh;
     }
 
     //----------  GLOBAL PAGE ATTRIBUTES  ----------//
@@ -2205,7 +2261,7 @@
 
     .navbar-dark{ 
         .navbar-toggler {
-        background-color: hsl(0, 0%, 80%) !important;
+        background-color: black !important;
     }
 }
 
@@ -2247,7 +2303,7 @@
     .navbar-brand,
     .navbar,
     .navbar a {
-        color: #646464 !important;
+        color: black !important;
     }
 
     .nope {
