--- a/wp-content/themes/understrap-child/sass/theme/atomicmouse_variables.scss
+++ b/wp-content/themes/understrap-child/sass/theme/atomicmouse_variables.scss
@@ -4,50 +4,85 @@
 // As example you find one of the most important Bootstrap variable below: $brand-primary.
 // Thats the ugly Bootstrap blue used for all the links, primary buttons etc.
 // Just add your color code here, compile the theme.scss file to change this color everywhere
+
+
+//clearing bootstrap variables
+// h1, h2, h3, h4, h5, h6,
+// .h1, .h2, .h3, .h4, .h5, .h6 {
+//     margin-bottom: $headings-margin-bottom;
+//     font-weight: unset;
+//     line-height: unset;
+//     margin-top: unset;
+//     margin-bottom: unset;
+// }
+
 @import "node_modules/modularscale-sass/stylesheets/_modularscale.scss";
 @import "node_modules/mathsass/dist/math";
 
-$modularscale: (base: 1em, ratio: 1.33);
 
-$ms-0-1: 0.178em;
-$ms-0-2: 0.238em;
-$ms-0-3: 0.317em;
-$ms-0-4: 0.422em;
-$ms-0-5: 0.563em;
-$ms-0-6: 0.639em;
-$ms-0-7: 0.75em;
-$ms-0-8: 0.78em;
-$ms-0-9: 0.851em;
-$ms-0: ms(0);
-$ms-_15: ms(0.15);
-$ms-_25: ms(0.25);
-$ms-_5: ms(0.5);
-$ms-_75: ms(0.75);
-$ms-1: ms(1);
-$ms-1_5: ms(1.5);
-$ms-2: ms(2);
-$ms-3: ms(3);
-$ms-3_5: ms(3.5);
-$ms-4: ms(4);
-$ms-5: ms(5);
-$ms-6: ms(6);
-$ms-7: ms(7);
-$ms-8: ms(8);
-$ms-8_5: ms(8.5);
-$ms-9: ms(9);
-$ms-9_5: ms(9.5);
+$min_width: 400;
+$max_width: 800;
 
-$ms-10: ms(10);
-$ms-10_5: ms(10.5);
-$ms-10_75: ms(10.75);
-$ms-11: ms(11);
-$ms-12: ms(12);
-$ms-12_5: ms(12.5);
-$ms-13: ms(13);
-$ms-13_5: ms(13.5);
-$ms-14: ms(14);
-$ms-15: ms(15);
-$ms-16: ms(16);
+$min_font: 12;
+$max_font: 24; 
+
+:root { font-size: #{$min_font}px; }
+
+@media (min-width: #{$min_width}px) and (max-width: #{$max_width}px) {
+  :root { 
+    font-size: calc(#{$min_font}px + (#{$max_font} - #{$min_font}) * ( (100vw - #{$min_width}px) / ( #{$max_width} - #{$min_width})));
+  }
+}
+@media (min-width: #{$max_width}px) {
+  :root { 
+    font-size: #{$max_font}px;
+  }
+}
+
+
+
+
+$modularscale: (base: 1rem, ratio: 1.33);
+
+$ms-0-1:    0.178em;
+$ms-0-2:    0.238em;
+$ms-0-3:    0.317em;
+$ms-0-4:    0.422em;
+$ms-0-5:    0.563em;
+$ms-0-6:    0.639em;
+$ms-0-7:    0.75em;
+$ms-0-8:    0.78em;
+$ms-0-9:    0.851em;
+$ms-0:      ms(0);
+$ms-_15:    ms(0.15);
+$ms-_25:    ms(0.25);
+$ms-_5:     ms(0.5);
+$ms-_75:    ms(0.75);
+$ms-1:      ms(1);
+$ms-1_5:    ms(1.5);
+$ms-2:      ms(2);
+$ms-3:      ms(3);
+$ms-3_5:    ms(3.5);
+$ms-4:      ms(4);
+$ms-5:      ms(5);
+$ms-6:      ms(6);
+$ms-7:      ms(7);
+$ms-8:      ms(8);
+$ms-8_5:    ms(8.5);
+$ms-9:      ms(9);
+$ms-9_5:    ms(9.5);
+
+$ms-10:     ms(10);
+$ms-10_5:   ms(10.5);
+$ms-10_75:  ms(10.75);
+$ms-11:     ms(11);
+$ms-12:     ms(12);
+$ms-12_5:   ms(12.5);
+$ms-13:     ms(13);    
+$ms-13_5:   ms(13.5);  
+$ms-14:     ms(14);
+$ms-15:     ms(15);
+$ms-16:     ms(16);
 
 // Fonts
 //
@@ -59,23 +94,25 @@ $font-family-monospace: roboto mono, SFMono-Regular, Menlo, Monaco, Consolas, "L
 $font-family-base: $font-family-sans-serif;
 $font-family-serif: adobe-garamond-pro, Georgia, Palatino, "Times New Roman", Courier;
 
-// stylelint-enable value-keyword-case
 
+
+// stylelint-enable value-keyword-case
 $font-weight-thin: 100;
 $font-weight-light: 200;
 $font-weight-normal: 300;
 $font-weight-bold: 400;
 $font-weight-black: 700;
 
-$h1-font-size: $ms-6;
+$h1-font-size: $ms-7;
 $h2-font-size: $ms-3;
 $h3-font-size: $ms-2;
 $h4-font-size: $ms-1;
 $h5-font-size: $ms-_75;
 $h6-font-size: $ms-_25;
 
+$headings-margin-bottom: unset;
 $headings-font-family: inherit;
-$headings-font-weight: 500;
+$headings-font-weight:unset;
 $headings-color: inherit;
 
 $body-1-font-size: $ms-4;
@@ -122,44 +159,51 @@ $width-10: $ms-14;
 $width-11: $ms-15;
 $width-12: $ms-16;
 
+
+
+
 //---VERTICAL RHYTHM CONTROLS
 :root {
     --baseline: 1.4;
-
-    /* Line-height fallback */
-    line-height: 1.4;
-    line-height: calc(var(--baseline) * 1rem);
+    line-height: var(--baseline)
 }
 
+    /* Line-height fallback */
+//     line-height: 1.4;
+//     line-height: calc(var(--baseline) * 1rem);
+
+// }
 //function to caculate responsive vertical rhythm units (rvr)
 @function rvr($multiple) {
     @return calc(var(--baseline) * $multiple * 1rem);
 }
 
-$rvr-_25: rvr(0);
-$rvr-_05: rvr(0.05);
-$rvr-_15: rvr(0.15);
-$rvr-_25: rvr(0.25);
-$rvr-_5: rvr(0.5);
-$rvr-_6: rvr(0.6);
-$rvr-_75: rvr(0.75);
-$rvr-1: rvr(1);
-$rvr-1_5: rvr(1.5);
-$rvr-2: rvr(2);
-$rvr-2_5: rvr(2.5);
-$rvr-3: rvr(3);
-$rvr-4: rvr(4);
-$rvr-5: rvr(5);
-$rvr-6: rvr(6);
-$rvr-7: rvr(7);
-$rvr-8: rvr(8);
+
+$rvr-0: 1;
+$rvr-_05: calc(var(--baseline) * .05rem);
+
+$rvr-_15: calc(var(--baseline) * 0.15rem);
+$rvr-_25: calc(var(--baseline) * 0.25rem);
+$rvr-_5:  calc(var(--baseline) * 0.5rem);
+$rvr-_6:  calc(var(--baseline) * 0.6rem);
+$rvr-_75: calc(var(--baseline) * 0.75rem);
+$rvr-1:   calc(var(--baseline) * 1rem);
+$rvr-1_5: calc(var(--baseline) * 1.5rem);
+$rvr-2:   calc(var(--baseline) * 2rem);
+$rvr-2_5: calc(var(--baseline) * 2.5rem);
+$rvr-3:   calc(var(--baseline) * 3rem);
+$rvr-4:   calc(var(--baseline) * 4rem);
+$rvr-5:   calc(var(--baseline) * 5rem);
+$rvr-6:   calc(var(--baseline) * 6rem);
+$rvr-7:   calc(var(--baseline) * 7rem);
+$rvr-8:   calc(var(--baseline) * 8rem);
 
 //function to caculate vertical rhythm (vr) fallback for unsupported browsers
 @function vr($multiple) {
     @return 1.4 * $multiple * 1rem;
 }
 
-$vr-0: vr(0);
+$vr-0: 1;
 $vr-_05: vr(0.05);
 $vr-_15: vr(0.15);
 $vr-_25: vr(0.25);
@@ -177,120 +221,94 @@ $vr-6: vr(6);
 $vr-7: vr(7);
 $vr-8: vr(8);
 
+
+$line-height-0:   $rvr-0;  
+$line-height-_05: $rvr-_05;
+$line-height-_15: $rvr-_15;
+$line-height-_25: $rvr-_25;
+$line-height-_5:  $rvr-_5; 
+$line-height-_6:  $rvr-_6; 
+$line-height-_75: $rvr-_75;
+$line-height-1:   $rvr-1;  
+$line-height-1_5: $rvr-1_5;
+$line-height-2:   $rvr-2;  
+$line-height-2_5: $rvr-2_5;
+$line-height-3:   $rvr-3;  
+
+
+
+
 @mixin v-0 {
-    margin: 0 0;
-    margin: 0 0;
-}
-
-@mixin v-1 {
-    margin: $rvr-1 0;
-    margin: $vr-1 0;
-}
-
-@mixin v-1_5 {
-    margin: $rvr-1_5 0;
-    margin: $vr-1_5 0;
-}
-
-@mixin v-2 {
-    margin: $rvr-2 0;
-    margin: $vr-2 0;
-}
-
-@mixin v-2_5 {
-    margin: $rvr-2_5 0;
-    margin: $vr-2_5 0;
-}
-
-@mixin v-3 {
-    margin: $rvr-3 0;
-    margin: $vr-3 0;
-}
-
-@mixin v-4 {
-    margin: $rvr-4 0;
-    margin: $vr-4 0;
-}
-
-@mixin v-5 {
-    margin: $rvr-5 0;
-    margin: $vr-5 0;
-}
-
-@mixin v-6 {
-    margin: $rvr-6 0;
-    margin: $vr-6 0;
-}
-
-@mixin v-7 {
-    margin: $rvr-7 0;
-    margin: $vr-7 0;
-}
-
-@mixin v-8 {
-    margin: $rvr-8 0;
-    margin: $vr-8 0;
-}
-
-@mixin v0 {
-    margin: 0 0;
     margin: 0 0;
 }
 
 @mixin v-_5 {
     margin: $rvr-_5 0;
-    margin: $vr-_5 0;
+    // margin: $vr-_5 0;
 }
 
 @mixin v-_75 {
     margin: $rvr-_75 0;
-    margin: $vr-_75 0;
+    // margin: $vr-_75 0;
 }
 
-@mixin v-1 {
-    margin: $rvr-1 0;
-    margin: $vr-1 0;
-}
+@mixin v-1     {margin-bottom: $rvr-1 !important; margin-top: $rvr-1 !important;}
+@mixin v-1_5   {margin-bottom: $rvr-1_5 !important; margin-top: $rvr-1_5 !important;}
+@mixin v-2     {margin-bottom: $rvr-2   !important; margin-top: $rvr-2 !important;}
+@mixin v-2_5   {margin-bottom: $rvr-2_5 !important; margin-top: $rvr-2_5 !important;}
+@mixin v-3     {margin-bottom: $rvr-3   !important; margin-top: $rvr-3 !important;}
+@mixin v-4     {margin-bottom: $rvr-4   !important; margin-top: $rvr-4 !important;}
+@mixin v-5     {margin-bottom: $rvr-5   !important; margin-top: $rvr-5 !important;}
+@mixin v-6     {margin-bottom: $rvr-6   !important; margin-top: $rvr-6 !important;}
+@mixin v-7     {margin-bottom: $rvr-7   !important; margin-top: $rvr-7 !important;}
+@mixin v-8     {margin-bottom: $rvr-8   !important; margin-top: $rvr-8 !important;}
+@mixin v-9     {margin-bottom: $rvr-9   !important; margin-top: $rvr-9 !important;}
+@mixin v-10    {margin-bottom: $rvr-10  !important; margin-top: $rvr-10 !important;}
+@mixin v-11    {margin-bottom: $rvr-11  !important; margin-top: $rvr-11 !important;}
+@mixin v-12    {margin-bottom: $rvr-12  !important; margin-top: $rvr-12 !important;}
+@mixin v-13    {margin-bottom: $rvr-13  !important; margin-top: $rvr-13 !important;}
 
-@mixin v1_5 {
-    margin: $rvr-1_5 0;
-    margin: $vr-1_5 0;
-}
+// @mixin v0 {
+    // margin: 0 0;
+    // margin: 0 0;
+// }
 
-@mixin v2 {
-    margin: $rvr-2 0;
-    margin: $vr-2 0;
-}
 
-@mixin v2-5 {
-    margin: $rvr-2_5 0;
-    margin: $vr-2_5 0;
-}
 
-@mixin v3 {
-    margin: $rvr-3 0;
-    margin: $vr-3 0;
-}
+// @mixin v2 {
+//     margin: $rvr-2 0;
+//     margin: $vr-2 0;
+// }
 
-@mixin v4 {
-    margin: $rvr-4 0;
-    margin: $vr-4 0;
-}
+// @mixin v2-5 {
+//     margin: $rvr-2_5 0;
+//     // margin: $vr-2_5 0;
+// }
 
-@mixin v5 {
-    margin: $rvr-5 0;
-    margin: $vr-5 0;
-}
+// @mixin v3 {
+//     margin: $rvr-3 0;
+//     // margin: $vr-3 0;
+// }
 
-@mixin v6 {
-    margin: $rvr-6 0;
-    margin: $vr-6 0;
-}
+// @mixin v4 {
+//     margin: $rvr-4 0;
+//     // margin: $vr-4 0;
+// }
 
-@mixin v7 {
-    margin: $rvr-7 0;
-    margin: $vr-7 0;
-}
+// @mixin v5 {
+//     margin: $rvr-5 0;
+//     // margin: $vr-5 0;
+// }
+
+// @mixin v6 {
+//     margin: $rvr-6 0;
+//     // margin: $vr-6 0;
+// }
+
+// @mixin v7 {
+//     margin: $rvr-7 0;
+//     // margin: $vr-7 0;
+// }
 
 // stylelint-disable declaration-no-important, selector-list-comma-newline-after
 
@@ -298,130 +316,21 @@ $vr-8: vr(8);
 // Headings
 //
 
-h1, h2, h3, h4, h5, h6,
-.h1, .h2, .h3, .h4, .h5, .h6 {
-    /*  margin-bottom: $headings-margin-bottom;*/
-    font-family: $headings-font-family;
-    font-weight: unset;
-    line-height: unset;
-    color: $headings-color;
-    margin-bottom: $vr-1;
-}
 
-h1, .h1 {
-    font-size: $h1-font-size;
-}
 
-h2, .h2 {
-    font-size: $h2-font-size;
-}
 
-h3, .h3 {
-    font-size: $h3-font-size;
-}
 
-h4, .h4 {
-    font-size: $h4-font-size;
-}
-
-h5, .h5 {
-    font-size: $h5-font-size;
-}
-
-h6, .h6 {
-    font-size: $h6-font-size;
-}
 
 .lead {
     font-size: $lead-font-size;
     font-weight: $lead-font-weight;
 }
 
-.display-1, .display-2, .display-3, .display-4, .display-5 {
-    color: unset;
-    font-weight: unset;
-    font-size: unset;
-}
 
-// Type display classes
-@mixin display-1 {
-    font-size: $display1-size;
-    font-weight: $display1-weight;
-}
 
-@mixin display-2 {
-    font-size: $display2-size;
-    font-weight: $display2-weight;
-}
 
-@mixin display-3 {
-    font-size: $display3-size;
-    font-weight: $display3-weight;
-}
 
-@mixin display-4 {
-    font-size: $display4-size;
-    font-weight: $display4-weight;
-}
 
-@mixin display-5 {
-    font-size: $display5-size;
-    font-weight: $display5-weight;
-}
-
-// Paragraphs
-//
-// Style p element.
-
-$paragraph-margin-bottom: $rvr-1, $vr-1;
-
-p {
-    line-height: 1.4;
-    font-family: $font-family-serif;
-}
-
-// Body type classes
-@mixin body-1 {
-    font-size: $body-1-font-size;
-    font-weight: $body-font-weight;
-    font-family: $font-family-serif;
-}
-
-@mixin body-2 {
-    font-size: $body-2-font-size;
-    font-weight: $body-font-weight;
-    font-family: $font-family-serif;
-}
-
-@mixin body-3 {
-    font-size: $body-3-font-size;
-    font-weight: $body-font-weight;
-    font-family: $font-family-serif;
-}
-
-@mixin body-4 {
-    font-size: $body-4-font-size;
-    font-weight: $body-font-weight;
-    font-family: $font-family-serif;
-}
-
-@mixin body-5 {
-    font-size: $body-5-font-size;
-    font-weight: $body-font-weight;
-    font-family: $font-family-serif;
-}
-
-@mixin body-6 {
-    font-size: $body-6-font-size;
-    font-weight: $body-font-weight;
-    font-family: $font-family-serif;
-}
-
-.copy {
-    @include body-4;
-
-    margin-bottom: vr(0.5);
-}
 
 /*@import "theme/partials/_atomicmouse_type";*/
 @import "theme/partials/_atomicmouse_color_system";
