--- a/wp-content/themes/understrap-child/sass/theme/atomicmouse.scss
+++ b/wp-content/themes/understrap-child/sass/theme/atomicmouse.scss
@@ -1710,7 +1710,7 @@
     }
 
     #aboutsplashcontainer h1 {
-        // // @include v-1;
+        // @include v-1;
     }
 
     #aboutsplashcontainer > span {
@@ -1726,29 +1726,62 @@
     // 
     // home/splash panel
     // ==========================================================================
-    #splash {}
+    #splash, #splashcontainer {
+height: 100vh;
+    }
 
     #splashcontainer {
         display: flex;
         margin: 0 auto;
         justify-content: center;
-        align-items: left;
+        align-items: center;
         flex-direction: column;
         height: 100vh;
+        text-align: center;
+        @include media-breakpoint-up(lg) {
+            text-align: left;
+            align-items: flex-start;
+                }
     }
 
     #splashcontainer h1 {
-        // @include v-1;
+        font-size: $ms-5;// @include v-1;
+       @include media-breakpoint-up(lg) {
+@include v-1;
+        }
+        @include media-breakpoint-up(xl) {
+font-size: $h1-font-size;
+        }
     }
 
-    #splashcontainer > span {
-        @include display-4;
+
+    // .hi, .hello{
+    //     display: inline-block;
+    //     text-align: center;
+    //     font-size: $ms-6_5;
+    //             @include media-breakpoint-up(xs) {
+    //                 width: 100%;
+    //             }
+    //             @include media-breakpoint-up(md) {
+    //                     width: auto;
+    //                     }
+    // }
+
+    #splashcontainer .splash1 {
+        @include display-6;
         // @include v-0;
     }
 
+    .splash-emp strong{
+    }
+
     #splashcontainer .splash2 {
-        @include display-2;
-        // @include v-2;
+        @include display-3;
+        @include v-2;
+        line-height: $rvr-2;
+        @include media-breakpoint-up(lg) {
+                @include v-1;
+                }
     }
 
   .bgme {
@@ -1757,18 +1790,21 @@
         background-repeat: no-repeat;
   
         @include make-col-ready;
-              @include make-col(12);
                 @include media-breakpoint-up(xs) {
-                  background-position: right bottom;
-            background-size: 135%;
+                  background-position: 107% bottom;
+                    background-size: 135%;
                }
             @include media-breakpoint-up(sm) {
+       background-size: 155%;
+       background-position: 130% bottom;
         }
             @include media-breakpoint-up(md) {
             background-position: right bottom;
-            background-size: cover;
+            background-size: 100%;
         }
             @include media-breakpoint-up(lg) {
+        background-size: 80%;
+        background-position: right bottom;
         }
             @include media-breakpoint-up(xl) {
         }
@@ -2141,27 +2177,19 @@
     // }
 
     @media (min-width: 576px) {
-        .bgme {
-            background-size: 90%;
-        }
+       
     }
 
     @media (min-width: 768px) {
-        .bgme {
-            background-size: 90%;
-        }
+        
     }
 
     @media (min-width: 992px) {
-        .bgme {
-            background-size: 90%;
-        }
+        
     }
 
     @media (min-width: 1200px) {
-        .bgme {
-            background-size: 70%;
-        }
+       
     }
 
     //========================================================
@@ -2230,7 +2258,13 @@
 
     @media (min-width: 1600px) {
         .container {
-            max-width: 1200px;
+            max-width: 1400px;
+        }
+    }
+
+     @media (min-width: 1900px) {
+        .container {
+            max-width: 1600px;
         }
     }
 
@@ -2261,7 +2295,7 @@
 
     .navbar-dark{ 
         .navbar-toggler {
-        background-color: black !important;
+        background-color: $primary !important;
     }
 }
 
@@ -2270,7 +2304,6 @@
     }
 
     .navbar-brand {
-        font-size: 1rem;
         margin-right: 0;
         margin-left: 1rem;
     }
@@ -2303,7 +2336,11 @@
     .navbar-brand,
     .navbar,
     .navbar a {
-        color: black !important;
+        color: $primary !important;
+        font-size: $ms-0-9;
+        @include media-breakpoint-up(lg) {
+                font-size: $ms-1;
+                }
     }
 
     .nope {
