--- a/wp-content/themes/understrap-child/sass/theme/atomicmouse_variables.scss
+++ b/wp-content/themes/understrap-child/sass/theme/atomicmouse_variables.scss
@@ -133,6 +133,7 @@ $display3-size: $ms-3;
 $display4-size: $ms-2;
 $display5-size: $ms-1;
 $display6-size: $ms-_75;
+$display7-size: $ms-_5; 
 
 $display1-weight: 300;
 $display2-weight: 300;
