--- a/wp-content/themes/understrap-child/sass/theme/PRECHROME STYLE TEST 1.3.19 atomicmouse.scss
+++ b/wp-content/themes/understrap-child/sass/theme/PRECHROME STYLE TEST 1.3.19 atomicmouse.scss
@@ -1968,7 +1968,6 @@ font-size: $h1-font-size;
         display: inline-flex;
         justify-content: center;
         align-items: center;
-        position: relative;
     }
 
     #help-container {
@@ -1989,57 +1988,17 @@ font-size: $h1-font-size;
         }
     }
 
-#help-links hr{
-    border: $rvr-_05 solid $primary;
-}
-
-
-    #help-links {        
-margin-top: $rvr-1;
+    #help-links {
         @include make-col-ready;
-        @include media-breakpoint-up(xs) {
+        @include media-breakpoint-up(sm) {
             @include make-col(12);
-            hr{
-                margin-top: $rvr-1;
-            }
         }
+
 
         @include media-breakpoint-up(md) {
             @include make-col(4);
-            hr{ 
-                visibility: hidden;
-            }
         }
     }
-
-
-#help-proclamations{
-    @include v-1;
-    @include media-breakpoint-up(xs) {
-    @include v-1_5;
-}
-}
-
-
-#help-links > ul{
-    list-style: none;
-padding-left: 0;
-    line-height: $rvr-2;
-    span{
-        font-weight: 600;
-        padding-right: $ms-1;
-    }
-    .help-links-li-content{
-        font-family: $font-family-serif;
-        font-weight: 300;
-        font-size: $ms-1;
-    }
-}
-
-#help-links > ul > li:nth-child(1) > span:nth-child(1) {
-     letter-spacing: 0.1rem;
-}
-
 
     #help-content {
         @include make-col-ready;
@@ -2091,7 +2050,6 @@ padding-left: 0;
     // ==========================================================================
 
     .sidenav {
-        display: none;
         z-index: 10000;
         position: absolute;
 
@@ -2145,7 +2103,7 @@ padding-left: 0;
     }
 
     .chevlf-svg {
-        // width: $ms-_5; 
+        // width: $ms-_5;
         height: $ms-4;
     }
 
@@ -2153,11 +2111,7 @@ padding-left: 0;
         font-size: $ms-_25;
         font-weight: 400;
         padding: 0 15px 0 15px;
-        position: relative;
-        margin-bottom: $rvr-2;
-
  @include media-breakpoint-up(md) {
-                position: relative;
                 padding: 0;
          }
     }
@@ -2174,14 +2128,15 @@ padding-left: 0;
 
     .page-title hr {
         border-style: solid;
-        border-width: $rvr-_05;
-        border-color: $primary;
+        border-width: 1px;
         // margin-top: $rvr-_5;
         // margin-bottom: $rvr-0;
         margin-left: 0;
         margin-right: 0;
         width: $width-3;
         margin: 0;
+        position: absolute;
+        top: 50px;
          @include media-breakpoint-up(md) {;
          }
     }
@@ -2280,15 +2235,9 @@ padding-left: 0;
         padding-left: 15px;
     }
 
-@media (min-width: 400px) {
-    .container{
-        max-width: 350px;
-    }
-}
-
     @media (min-width: 576px) {
         .container {
-            max-width: 500px;
+            max-width: 540px;
         }
     }
 
@@ -2352,10 +2301,6 @@ padding-left: 0;
     //   margin-left: -15px; }
 
     //----------  NAVBAR  ----------//
-
-.navbar{
-    padding: 1rem;
-}
 
     .navbar-dark{ 
         .navbar-toggler {
